Main Page Update
Centered the body, added real text.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Heyoo</title>
+        <style>
+            body {
+		    background-color: black;
+		    margin: 0px 0px 0px 0px;
+		    padding: 0px;
+		    color: white;
+		    }
+            #content {
+			width: 830px;
+			height: 100%;
+			background-color: black;
+			margin-left: auto;
+			margin-right: auto;
+		    }
+        </style>
+    </head>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-<img src="harry_potter.png"></img>
+    <div id="content" style="height: 5000px">
+        <img src="./harry_potter.png"></img>
+        <br>
+        <p>Lets see how this goes....</p>
+	</div>
 </body>
 </html>
