--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Heyoo</title>
+        <link rel="icon" href="./james.png">
+        <title>JAMES?</title>
         <style>
             body {
 		    background-color: black;
@@ -20,7 +21,8 @@
     </head>
 <body>
     <div id="content" style="height: 5000px">
-        <img src="./harry_potter.png"></img>
+        <img src="./harry_potter.png"></img><br>
+        <img src="./james.png"></img>
 	</div>
 </body>
 </html>
