--- a/main/index.html
+++ b/main/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" href="./james.png">
+        <link rel="icon" href="../james.png">
         <title>JAMES?</title>
         <style>
             body {
