--- a/main/index.html
+++ b/main/index.html
@@ -25,7 +25,7 @@
         </style>
     </head>
 <body>
-    <div id="content" style="height: 5000px">
+    <div id="content" style="">
 		<p style="font-size: 24px; color: #FE3F8F; font-family: Arial;"><b>&nbsp;
 			<script language="JavaScript">
 			var months=new Array(13);
@@ -51,6 +51,9 @@
 			document.write(date + ", " + year + "</left>");
 			</script>
 			<left></left>
+			<img src="windows.gif"style="height:24px;"><br>
+			<img src="nyan_cat.gif" style="width: 300px;">
+			<img src="Garry's_Mod_logo.png" style="width: 40px;">
 	</div>
 </body>
 </html>
