Added Team Fortress Feckin Mad Status & 88x31 Buttons

--- a/main/index.html
+++ b/main/index.html
@@ -54,6 +54,9 @@
 			<img src="windows.gif"style="height:24px;"><br>
 			<img src="nyan_cat.gif" style="width: 300px;">
 			<img src="Garry's_Mod_logo.png" style="width: 40px;">
+			<img src="https://cache.gametracker.com/server_info/tfc.roystonvasey.org.uk:27017/b_560_95_1.png" border="0" width="560" height="95" alt=""/>
+			<a href="https://store.steampowered.com/app/20"><img src="team_fortress_get_it.gif"></a>
+			<a href="https://store.steampowered.com/app/20"><img src="tfnow.gif"></a>
 	</div>
 </body>
 </html>
