Layout changes to main page.
Added empty sub menu to the left and a div for the main contents of the page. Whatever that may be...

--- a/main/index.html
+++ b/main/index.html
@@ -5,7 +5,7 @@
         <title>JAMES?</title>
         <style>
             body {
-		    background-color: black;
+		    background-color: grey;
 		    margin: 0px 0px 0px 0px;
 		    padding: 0px;
 		    color: white;
@@ -57,6 +57,35 @@
 			<img src="https://cache.gametracker.com/server_info/tfc.roystonvasey.org.uk:27017/b_560_95_1.png" border="0" width="560" height="95" alt=""/>
 			<a href="https://store.steampowered.com/app/20"><img src="team_fortress_get_it.gif"></a>
 			<a href="https://store.steampowered.com/app/20"><img src="tfnow.gif"></a>
+	</div>
+	<div id ="content" style="">
+		<div style ="width:140px;background-color:black; float: left;">
+			<table style="border-spacing: 0px;width:140px;">
+				<tbody>
+					<tr style="height:40px;">
+						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: middle; font-family: Arial, Helvetica, sans-serif;border-color: white; border-width: 4px; border-style: solid;">
+							Epic Shit
+						</td>
+					</tr>
+					<tr style="height:460px;">
+						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: white; border-width: 4px; border-style: solid;">
+							Epic Shit here soon...
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div style ="width:690px;height: 500px;background-color:#07825E; float: right;">
+			<table style="border-spacing: 0px;width:690px;">
+				<tbody>
+					<tr>
+						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: middle; font-family: Arial, Helvetica, sans-serif;">
+							More Stuff! (soon)
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </body>
 </html>
