Main page update
Removed gaps between images and dividers. Fixed main divider height and added a lower divider. Removed bold text from page.

--- a/main/index.html
+++ b/main/index.html
@@ -50,16 +50,18 @@
 			document.write("<left>" + lmonth + " ");
 			document.write(date + ", " + year + "</left>");
 			</script>
-			<left></left>
-			<img src="windows.gif"style="height:24px;"><br>
-			<img src="nyan_cat.gif" style="width: 300px;">
-			<img src="Garry's_Mod_logo.png" style="width: 40px;">
-			<img src="https://cache.gametracker.com/server_info/tfc.roystonvasey.org.uk:27017/b_560_95_1.png" border="0" width="560" height="95" alt=""/>
-			<a href="https://store.steampowered.com/app/20"><img src="team_fortress_get_it.gif"></a>
-			<a href="https://store.steampowered.com/app/20"><img src="tfnow.gif"></a>
-	</div>
-	<div id ="content" style="">
-		<div style ="width:140px;background-color:black; float: left;">
+			<left></left></b>
+			<img src="windows.gif"style="height:24px;"></p>
+			<div style="font-size: 0px;">
+				<img src="nyan_cat.gif" style="width: 300px;">
+				<img src="Garry's_Mod_logo.png" style="width: 40px;">
+				<img src="https://cache.gametracker.com/server_info/tfc.roystonvasey.org.uk:27017/b_560_95_1.png" border="0" width="560" height="95" alt=""/>
+				<a href="https://store.steampowered.com/app/20" style="text-decoration:none; height:0px;"><img src="team_fortress_get_it.gif"></a>
+				<a href="https://store.steampowered.com/app/20" style="text-decoration:none; height:0px;"><img src="tfnow.gif"></a></img>
+			</div>
+		</div>
+	<div id ="content" style="display: flex;">
+		<div style ="width:140px;background-color:black; float:left">
 			<table style="border-spacing: 0px;width:140px;">
 				<tbody>
 					<tr style="height:40px;">
@@ -67,7 +69,7 @@
 							Epic Shit
 						</td>
 					</tr>
-					<tr style="height:460px;">
+					<tr style="height:500px;">
 						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: white; border-width: 4px; border-style: solid;">
 							Epic Shit here soon...
 						</td>
@@ -75,9 +77,9 @@
 				</tbody>
 			</table>
 		</div>
-		<div style ="width:690px;height: 500px;background-color:#07825E; float: right;">
+		<div style ="width:690px;background-color:#07825E; float: right;">
 			<table style="border-spacing: 0px;width:690px;">
-				<tbody>
+				<tbody style="height:100%;">
 					<tr>
 						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: middle; font-family: Arial, Helvetica, sans-serif;">
 							More Stuff! (soon)
@@ -86,6 +88,9 @@
 				</tbody>
 			</table>
 		</div>
+	</div>
+	<div id="content"style="height:150px;font-family: Arial, Helvetica, sans-serif;background-color:#583862;display:flex;">
+			Bottom
 	</div>
 </body>
 </html>
