--- a/main/index.html
+++ b/main/index.html
@@ -6,6 +6,7 @@
         <style>
             body {
 		    background-color: grey;
+			background-image: url("../james.png");
 		    margin: 0px 0px 0px 0px;
 		    padding: 0px;
 		    color: white;
@@ -91,6 +92,9 @@
 	</div>
 	<div id="content"style="height:150px;font-family: Arial, Helvetica, sans-serif;background-color:#583862;display:flex;">
 			Bottom
+	</div>
+	<div id="content"style="height:1500px;font-family: Arial, Helvetica, sans-serif;display:flex;background-color:transparent;">
+		
 	</div>
 </body>
 </html>
