--- a/main/index.html
+++ b/main/index.html
@@ -57,32 +57,40 @@
 				<img src="nyan_cat.gif" style="width: 300px;">
 				<img src="Garry's_Mod_logo.png" style="width: 40px;">
 				<img src="https://cache.gametracker.com/server_info/tfc.roystonvasey.org.uk:27017/b_560_95_1.png" border="0" width="560" height="95" alt=""/>
-				<a href="https://store.steampowered.com/app/20" style="text-decoration:none; height:0px;"><img src="team_fortress_get_it.gif"></a>
-				<a href="https://store.steampowered.com/app/20" style="text-decoration:none; height:0px;"><img src="tfnow.gif"></a></img>
 			</div>
 		</div>
 	<div id ="content" style="display: flex;">
-		<div style ="width:140px;background-color:black; float:left">
-			<table style="border-spacing: 0px;width:140px;">
+		<div style ="width:184px;background-color:black; float:left">
+			<table style="border-spacing: 0px;width:184px;">
 				<tbody>
 					<tr style="height:40px;">
-						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: middle; font-family: Arial, Helvetica, sans-serif;border-color: white; border-width: 4px; border-style: solid;">
+						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: middle; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;">
 							Epic Shit
 						</td>
 					</tr>
 					<tr style="height:500px;">
-						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: white; border-width: 4px; border-style: solid;">
-							Epic Shit here soon...
+						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;">
+							coming soon... (never)
+						</td>
+					</tr>
+					<tr>
+						<td style = "padding: 0px 0px 0px 0px; text-align: left;vertical-align: bottom; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;">
+							<div style="display: block; font-size: 0px;">
+								<a href="https://store.steampowered.com/app/20"><img src="team_fortress_get_it.gif"></a>
+								<a href="https://store.steampowered.com/app/20"><img src="tfnow.gif"></a></img>
+								<a href="https://store.steampowered.com/app/20"><img src="tfnow.gif"></a></img>
+								<a href="https://store.steampowered.com/app/20"><img src="team_fortress_get_it.gif"></a>
+							</div>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
-		<div style ="width:690px;background-color:#07825E; float: right;">
-			<table style="border-spacing: 0px;width:690px;">
-				<tbody style="height:100%;">
+		<div style ="width:690px;background-color:black; float: right;">
+			<table style="border-spacing: 0px;width:646px;height:100%;">
+				<tbody>
 					<tr>
-						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: middle; font-family: Arial, Helvetica, sans-serif;">
+						<td style = "height:100px;padding: 0px 0px 0px 0px; text-align:center;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;height:100%;">
 							More Stuff! (soon)
 						</td>
 					</tr>
@@ -90,7 +98,7 @@
 			</table>
 		</div>
 	</div>
-	<div id="content"style="height:150px;font-family: Arial, Helvetica, sans-serif;background-color:#583862;display:flex;">
+	<div id="content"style="height:150px;font-family: Arial, Helvetica, sans-serif;background-color:#583862;display:flex; visibility: hidden;">
 			Bottom
 	</div>
 	<div id="content"style="height:1500px;font-family: Arial, Helvetica, sans-serif;display:flex;background-color:transparent;">
