Added "Last Updated" info

--- a/index.html
+++ b/index.html
@@ -31,44 +31,44 @@
 			}
 		</script>
     </head>
-<body>
-    <div id="content" style="height: 5000px">
-		
-		<p style="font-size: 24px; color: #FE3F8F; font-family: Arial;"><b>&nbsp;
-			<script language="JavaScript">
-			var months=new Array(13);
-			months[1]="January";
-			months[2]="February";
-			months[3]="March";
-			months[4]="April";
-			months[5]="May";
-			months[6]="June";
-			months[7]="July";
-			months[8]="August";
-			months[9]="September";
-			months[10]="October";
-			months[11]="November";
-			months[12]="December";
-			var time=new Date();
-			var lmonth=months[time.getMonth() + 1];
-			var date=time.getDate();
-			var year=time.getYear();
-			if (year < 2000)    
-			year = year + 1900;
-			document.write("<left>" + lmonth + " ");
-			document.write(date + ", " + year + "</left>");
-			</script>
-			<left></left>
-			</b></p>
-        <img src="harry_potter.png"></img><br><br><br><br><br><br><br><br><br>
-        <table style="border-spacing: 0px;">
-			<tr style="border-spacing: 0px;">
-				<td style="border: 5px solid white; border-spacing: 0px;">
-					<p><a style="color:greenyellow;" href="main">Onwards...</a></p>
-					<p style=""><a id="retreat" onclick="clicked_on()" style="color:grey; cursor: pointer;"><u id="retreatText">...Retreat</u></a></p>
-				</td>
-			</tr>
-		</table>
-	</div>
-</body>
+	<body>
+	    <div id="content" style="height: 5000px">
+
+			<p style="font-size: 24px; color: #FE3F8F; font-family: Arial;"><b>&nbsp;
+				<script language="JavaScript">
+				var months=new Array(13);
+				months[1]="January";
+				months[2]="February";
+				months[3]="March";
+				months[4]="April";
+				months[5]="May";
+				months[6]="June";
+				months[7]="July";
+				months[8]="August";
+				months[9]="September";
+				months[10]="October";
+				months[11]="November";
+				months[12]="December";
+				var time=new Date();
+				var lmonth=months[time.getMonth() + 1];
+				var date=time.getDate();
+				var year=time.getYear();
+				if (year < 2000)    
+				year = year + 1900;
+				document.write("<left>" + lmonth + " ");
+				document.write(date + ", " + year + "</left>");
+				</script>
+				<left></left>
+				</b></p>
+	        <img src="harry_potter.png"></img><br>Last Updated 25/01/2023<br><br><br><br><br><br><br><br>
+	        <table style="border-spacing: 0px;">
+				<tr style="border-spacing: 0px;">
+					<td style="border: 5px solid white; border-spacing: 0px;">
+						<p><a style="color:greenyellow;" href="main">Onwards...</a></p>
+						<p style=""><a id="retreat" onclick="clicked_on()" style="color:grey; cursor: pointer;"><u id="retreatText">...Retreat</u></a></p>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</body>
 </html>
