--- a/main/index.html
+++ b/main/index.html
@@ -80,6 +80,15 @@
 								<a href="https://store.steampowered.com/app/20"><img src="tfnow.gif"></a></img>
 								<a href="https://store.steampowered.com/app/20"><img src="tfnow.gif"></a></img>
 								<a href="https://store.steampowered.com/app/20"><img src="team_fortress_get_it.gif"></a>
+								<a href=""><img src="winrar.gif"></a></img>
+								<a href=""><img src="screw.gif"></a></img>
+								<a href=""><img src="sayno2web3.gif"></a></img>
+								<a href=""><img src="i_like_computer.png"></a></img>
+								<a href=""><img src="html_learn_it_today.gif"></a></img>
+								<a href=""><img src="36581483_P5h.gif"></a></img>
+								<a href=""><img src="anydamn.gif"></a></img>
+								<a href=""><img src="bookmark.gif"></a></img>
+								<a href=""><img src="html.gif"></a></img>
 							</div>
 						</td>
 					</tr>
