Removing last updated message

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</script>
 				<left></left>
 				</b></p>
-	        <img src="harry_potter.png"></img><br>Last Updated 25/01/2023<br><br><br><br><br><br><br><br>
+	        <img src="harry_potter.png"></img><br><br><br><br><br><br><br><br><br>
 	        <table style="border-spacing: 0px;">
 				<tr style="border-spacing: 0px;">
 					<td style="border: 5px solid white; border-spacing: 0px;">
