--- a/main/index.html
+++ b/main/index.html
@@ -51,8 +51,6 @@
 			<img src="windows.gif"style="height:24px;"></p>
 			<div style="font-size: 0px;">
 				<img src="nyan_cat.gif" style="width: 300px;">
-				<img src="Garry's_Mod_logo.png" style="width: 40px;">
-				
 			</div>
 		</div>
 	<div id ="content" style="display: flex;">
@@ -61,12 +59,80 @@
 				<tbody>
 					<tr style="height:40px;">
 						<td style = "padding: 0px 0px 0px 0px; text-align: center;vertical-align: middle; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;">
-							Epic Shit
+							???????
 						</td>
 					</tr>
 					<tr style="height:500px">
-						<td style = "font-size:14px;padding: 0px 0px 0px 0px; text-align: center;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;">
-							coming soon... (never)
+						<td style = "font-size:14px;padding: 0px 0px 0px 0px; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;">
+							<div style="height:100%">
+								<table style="border-spacing: 0px;font-size:0px;">
+									<tbody>
+										<tr style="height:14px;">
+											<td style="width: 14px;padding: 0px 0px 0px 0px;"></td>
+										</tr>
+										<tr>
+											<td style="width: 14px;padding: 0px 0px 0px 0px;"></td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<a href="Garry's_Mod"><img src="Garry's_Mod_logo.png" style="width: 40px;"></a>
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+										</tr>
+										<tr>
+											<td style="width: 14px;padding: 0px 0px 0px 0px;"></td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+										</tr>
+										<tr>
+											<td style="width: 14px;padding: 0px 0px 0px 0px;"></td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+										</tr>
+										<tr>
+											<td style="width: 14px;padding: 0px 0px 0px 0px;"></td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+										</tr>
+										<tr>
+											<td style="width: 14px;padding: 0px 0px 0px 0px;"></td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+											<td style="padding: 0px 0px 0px 0px; width:54px; height:54px; text-align: left; vertical-align: top;">
+												<img src="NA.png" style="width: 40px;">
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 						</td>
 					</tr>
 					<tr>
