--- a/main/index.html
+++ b/main/index.html
@@ -143,7 +143,7 @@
 								<a href="https://store.steampowered.com/app/20"><img src="tfnow.gif"></a></img>
 								<a href="https://store.steampowered.com/app/20"><img src="team_fortress_get_it.gif"></a>
 								<a href="https://www.win-rar.com/"><img src="winrar.gif"></a></img>
-								<a href="file:///C:/"><img src="screw.gif"></a></img>
+								<a href=""><img src="screw.gif"></a></img>
 								<a href=""><img src="sayno2web3.gif"></a></img>
 								<a href=""><img src="i_like_computer.png"></a></img>
 								<a href=""><img src="html_learn_it_today.gif"></a></img>
