--- a/main/index.html
+++ b/main/index.html
@@ -49,8 +49,8 @@
 			</script>
 			<left></left></b>
 			<img src="windows.gif"style="height:24px;"></p>
-			<div style="font-size: 0px;">
-				<img src="nyan_cat.gif" style="width: 300px;">
+			<div style="margin: 0px;">
+				<p style="font-size:34px; text-align: center;margin: 0px;">Disclaimer</p><p style=" text-align: center;margin: 0px;">I support equal rights.<br>I support LGBT.<br>The moon landing happened.<br>The holocaust happened.<br>The earth is not flat.<br><br>Disagree? <span style="color:red; text-decoration: underline;">Leave</span><br><br>Any evidence of me being sexist, racist, anti-lgbt or similar is purely "dark humor" and does not represent my personal views in any way, shape, or form.</p>
 			</div>
 		</div>
 	<div id ="content" style="display: flex;">
@@ -179,18 +179,24 @@
 					</tr>
 					
 					<tr>
-						<td style = "height:100%;padding: 0px 0px 0px 0px;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;"</td>
+						<td style = "height:100%;padding: 0px 0px 0px 0px;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;">
 							
 						</td>
 					</tr>
 					<tr style="font-size: 0px;">
-						<td style = "padding: 0px 0px 0px 0px;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;"</td>
+						<td style = "padding: 0px 0px 0px 0px;vertical-align: top; font-family: Arial, Helvetica, sans-serif;border-color: #333333; border-width: 4px; border-style: solid;">
 							<img src="https://cache.gametracker.com/server_info/tfc.roystonvasey.org.uk:27017/b_560_95_1.png" border="0" width="638" height="110" alt=""/>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
+	</div>
+	<div id="content"style="font-family: Arial, Helvetica, sans-serif;background-color:transparent;display:flex;font-size:0px;">
+		<iframe src="https://steamdb.info/embed/?appid=526870" height="386" style="border:0;overflow:hidden;width:100%" loading="lazy"></iframe>
+	</div>
+	<div id="content"style="font-family: Arial, Helvetica, sans-serif;background-color:transparent;display:flex;font-size:0px;">
+		<iframe src="https://steamdb.info/embed/?appid=427520" height="386" style="border:0;overflow:hidden;width:100%" loading="lazy"></iframe>
 	</div>
 	<div id="content"style="height:150px;font-family: Arial, Helvetica, sans-serif;background-color:#583862;display:flex; visibility: hidden;">
 			Bottom
