--- a/main/Garry's_Mod/index.html
+++ b/main/Garry's_Mod/index.html
@@ -1,1 +1,62 @@
-garry's mod
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="icon" href="../../james.png">
+        <title>JAMES?</title>
+        <style>
+            body {
+		    background-color: #008080;
+			background-image: url("../../james.png");
+		    margin: 0px 0px 0px 0px;
+		    padding: 0px;
+		    color: white;
+		    }
+            #content {
+			width: 830px;
+			height: 100%;
+			background-color: black;
+			margin-left: auto;
+			margin-right: auto;
+		    }
+        </style>
+    </head>
+<body>
+    <div id="content">
+		<p style="font-size: 24px; color: #FE3F8F; font-family: Arial;margin: 0px 0px 0px 0px;"><b>&nbsp;
+			<script language="JavaScript">
+			var months=new Array(13);
+			months[1]="January";
+			months[2]="February";
+			months[3]="March";
+			months[4]="April";
+			months[5]="May";
+			months[6]="June";
+			months[7]="July";
+			months[8]="August";
+			months[9]="September";
+			months[10]="October";
+			months[11]="November";
+			months[12]="December";
+			var time=new Date();
+			var lmonth=months[time.getMonth() + 1];
+			var date=time.getDate();
+			var year=time.getYear();
+			if (year < 2000)    
+			year = year + 1900;
+			document.write("<left>" + lmonth + " ");
+			document.write(date + ", " + year + "</left>");
+			</script>
+			<left></left></b>
+			<img src="..\windows.gif"style="height:24px;"></p>
+		</div>
+	<div id ="content" style="display: flex;">
+    Garry's Mod :)
+    </div>
+	<div id="content"style="height:150px;font-family: Arial, Helvetica, sans-serif;background-color:#583862;display:flex; visibility: hidden;">
+			Bottom
+	</div>
+	<div id="content"style="height:1500px;font-family: Arial, Helvetica, sans-serif;display:flex;background-color:transparent;">
+		
+	</div>
+</body>
+</html>
